apps/market-data/sin/ui-apps/signer-config-prod/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: signer-config
spec:
  selector:
    matchLabels:
      app: signer-config
  replicas: 1
  template:
    metadata:
      labels:
        app: signer-config
    spec:
      containers:
        - name: signer-config
          image: ghcr.io/alphalab-hq/signer-config:1.1.0
          resources:
            requests:
              cpu: "250m"
              memory: 200Mi
            limits:
              cpu: "500m"
              memory: 500Mi
          ports:
            - containerPort: 4000
      tolerations:
        - key: node/destiny
          operator: 'Equal'
          value: 'alc-ui'
          effect: 'NoSchedule'
      nodeSelector:
        node/destiny: alc-ui  
      imagePullSecrets:
        - name: ghcr-creds
