apps/market-data/sin/ui-apps/signer-config-prod/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: signer-config
spec:
  selector:
    app: signer-config
  ports:
    - protocol: TCP
      port: 4000
